--- a/app/config/keywords.yml
+++ b/app/config/keywords.yml
@@ -12,7 +12,7 @@ reddit:
     - "EntrepreneurRideAlong"
   keywords:
   # Self-Promotion
-    - "time"
+    - "time for self-promotion"
     - "self-promotion"
     - "promote your startup"
     - "plug your project"
