--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -16,6 +16,7 @@ cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 cryptography==43.0.3
+distro==1.9.0
 dnspython==2.7.0
 fastapi==0.115.8
 filetype==1.2.0
@@ -31,10 +32,12 @@ httplib2==0.22.0
 httpx==0.27.2
 idna==3.10
 instagrapi==2.1.3
+jiter==0.8.2
 libipld==3.0.0
 lxml==5.3.0
 multidict==6.1.0
 oauthlib==3.2.2
+openai==1.61.0
 pillow==11.1.0
 praw==7.8.1
 prawcore==2.4.0
@@ -61,6 +64,7 @@ sniffio==1.3.1
 socksio==1.0.0
 soupsieve==2.6
 starlette==0.45.3
+tqdm==4.67.1
 tweepy==4.15.0
 twikit==2.2.2
 typing_extensions==4.12.2
